--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,17 +33,16 @@ services:
     networks:
       - suzoo_network
     ports:
-      - "8545:8545"     # RPC
-      - "30303:30303"   # P2P
+      - "8545:8545"
+      - "30303:30303"
     volumes:
-      - geth_data:/geth/data
-      - ./geth/keystore:/geth/keystore
-      - ./geth/password.txt:/geth/password.txt
+      - geth_data:/geth/data  
     healthcheck:
       test: ["CMD-SHELL", "curl --silent --data '{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}' -H 'Content-Type: application/json' http://localhost:8545 || exit 1"]
       interval: 10s
       timeout: 5s
-      retries: 20
+      retries: 5
+      start_period: 20s
 
   ###################################################################
   # 3. IPFS (suzoo_ipfs)
