--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,48 @@
 services:
+  # 1. PostgreSQL
   suzoo_postgres:
     image: postgres:15-alpine
     container_name: suzoo_postgres
     environment:
-      POSTGRES_USER: "${POSTGRES_USER:-postgres}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-postgres}"
-      POSTGRES_DB: "${POSTGRES_DB:-suzoo_db}"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "suzoo_db"
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     networks:
       - suzoo_network
+    ports:
+      - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-suzoo_db} || exit 1"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d suzoo_db || exit 1"]
       interval: 5s
       timeout: 5s
       retries: 5
- 
-  geth:
-    build: .
-    container_name: geth-node
-    volumes:
-      - ./data:/geth/data               # Persist chain data (including keystore) on the host
-    ports:
-      - "8545:8545"                     # HTTP RPC port
-      - "8546:8546"                     # WebSocket RPC port
-      - "30303:30303"                   # P2P network port (TCP)
-      - "30303:30303/udp"              # P2P discovery port (UDP)
+
+  # 2. Geth (Clique PoA) - suzoo_geth
+  suzoo_geth:
+    build:
+      context: ./geth
+      dockerfile: Dockerfile
+    container_name: suzoo_geth
     networks:
-      - ethereum-net
+      - suzoo_network
+    volumes:
+      - geth_data:/geth/data
+    ports:
+      - "8545:8545"      # RPC
+      - "8546:8546"      # WebSocket
+      - "30303:30303"    # P2P
+      - "30303:30303/udp"
     healthcheck:
-      # Check if the geth RPC is responding (attempt to fetch latest block number)
       test: ["CMD", "geth", "attach", "http://localhost:8545", "--exec", "eth.blockNumber"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 5s
-  
+      start_period: 30s
+
+  # 3. IPFS
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
     container_name: suzoo_ipfs
@@ -50,6 +54,7 @@ services:
     volumes:
       - ipfs_data:/data/ipfs
 
+  # 4. FastAPI
   suzoo_fastapi:
     build:
       context: ./fastapi
@@ -63,10 +68,9 @@ services:
       suzoo_ipfs:
         condition: service_started
     environment:
-      DATABASE_URL: "${DATABASE_URL}"
-      ETH_RPC_URL: "${ETH_RPC_URL}"
-      IPFS_API_URL: "${IPFS_API_URL}"
-      NODE_ENV: "${NODE_ENV:-production}"
+      DATABASE_URL: "postgresql://postgres:postgres@suzoo_postgres:5432/suzoo_db"
+      ETH_RPC_URL: "http://suzoo_geth:8545"
+      IPFS_API_URL: "http://suzoo_ipfs:5001"
     networks:
       - suzoo_network
     expose:
@@ -78,6 +82,7 @@ services:
       retries: 10
       start_period: 120s
 
+  # 5. Express
   suzoo_express:
     build:
       context: ./express
@@ -89,15 +94,10 @@ services:
       suzoo_geth:
         condition: service_healthy
     environment:
-      DATABASE_URL: "${DATABASE_URL}"
-      ETH_RPC_URL: "${ETH_RPC_URL}"
-      IPFS_API_URL: "${IPFS_API_URL}"
-      JWT_SECRET: "${JWT_SECRET}"
-      CLOUDINARY_CLOUD_NAME: "${CLOUDINARY_CLOUD_NAME}"
-      CLOUDINARY_API_KEY: "${CLOUDINARY_API_KEY}"
-      CLOUDINARY_API_SECRET: "${CLOUDINARY_API_SECRET}"
-      RAPIDAPI_KEY: "${RAPIDAPI_KEY}"
-      NODE_ENV: "${NODE_ENV:-production}"
+      DATABASE_URL: "postgresql://postgres:postgres@suzoo_postgres:5432/suzoo_db"
+      ETH_RPC_URL: "http://suzoo_geth:8545"
+      IPFS_API_URL: "http://suzoo_ipfs:5001"
+      NODE_ENV: "production"
       PORT: "3000"
     networks:
       - suzoo_network
@@ -109,39 +109,33 @@ services:
       timeout: 5s
       retries: 5
 
-  suzoo_crawler:
-    build:
-      context: ./crawler
-      dockerfile: Dockerfile
-    container_name: suzoo_crawler
-    depends_on:
-      suzoo_fastapi:
-        condition: service_started
-      suzoo_postgres:
-        condition: service_healthy
-    environment:
-      ETH_RPC_URL: "${ETH_RPC_URL}"
-      DATABASE_URL: "${DATABASE_URL}"
-      RAPIDAPI_KEY: "${RAPIDAPI_KEY}"
-    networks:
-      - suzoo_network
-
+  # 6. React 前端
   suzoo_frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: suzoo_frontend
+    depends_on:
+      suzoo_express:
+        condition: service_healthy
+      suzoo_fastapi:
+        condition: service_healthy
     networks:
       - suzoo_network
     environment:
-      NODE_ENV: "${NODE_ENV:-production}"
-    volumes:
-      - ./frontend/build:/app/build
+      NODE_ENV: "production"
+    expose:
+      - "5000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
 
+  # 7. Nginx
   suzoo_nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
+    image: nginx:latest
     container_name: suzoo_nginx
     depends_on:
       suzoo_express:
@@ -154,11 +148,15 @@ services:
       - suzoo_network
     ports:
       - "80:80"
-      - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./frontend/build:/usr/share/nginx/html:ro
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
 networks:
   suzoo_network:
