--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,27 +1,17 @@
+# Use official Ethereum Geth image as base
 FROM ethereum/client-go:stable
 
-# 建立非 root 用戶 gethuser 並創建必要的目錄
-RUN adduser -D -u 1000 gethuser && mkdir -p /geth/data/keystore
-
-WORKDIR /geth
-
-# 複製必要檔案到容器中
+# Create directories and copy configuration files
+RUN mkdir -p /geth/keystore
 COPY genesis.json /geth/genesis.json
-COPY keystore/ /geth/keystore/
-COPY password.txt /geth/password.txt
+COPY keystore/UTC--2025-04-03T08-00-02.051862034Z--034f9688de6bf5709da5c258b3825cb01c5ae475 /geth/keystore/
 COPY init.sh /geth/init.sh
 
-# 調整檔案權限與所有權
-RUN chown -R gethuser:gethuser /geth && \
-    chmod 0400 /geth/genesis.json && \
-    chmod 0500 /geth/init.sh && \
-    chmod 0400 /geth/password.txt && \
-    chmod -R 0700 /geth/keystore
+# Add the password file for the keystore
+RUN echo "Zack967988" > /geth/password.txt
 
-USER gethuser
+# Ensure the init script is executable
+RUN chmod +x /geth/init.sh
 
-# 暴露 RPC 與 P2P 端口（8545: RPC，30303: P2P，8546: WS 如果啟用）
-EXPOSE 8545 30303 8546
-
-# 設定容器入口點為 init.sh
-ENTRYPOINT ["/bin/sh", "/geth/init.sh"]
+# Set the entrypoint to the init script
+ENTRYPOINT ["/geth/init.sh"]
