--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,84 +1,86 @@
-# HTTP 80 -> HTTPS 443 重導
+########################################################
+# 1) HTTP 80 -> HTTPS 重導
+########################################################
 server {
-    listen       80;
-    listen       [::]:80;
-    server_name  suzookaizokuhunter.com www.suzookaizokuhunter.com;
-    return 301   https://$host$request_uri;
+    listen 80;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    return 301 https://$host$request_uri;
 }
 
-# HTTPS 主服務配置
+########################################################
+# 2) HTTPS 主服務 (443)
+########################################################
 server {
-    listen                   443 ssl http2;
-    listen                   [::]:443 ssl http2;
-    server_name              suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    listen 443 ssl;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL 憑證與金鑰 (Let's Encrypt)
-    ssl_certificate          /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key      /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-    ssl_session_cache        shared:SSL:10m;
-    ssl_session_timeout      10m;
-    ssl_protocols            TLSv1.2 TLSv1.3;
+    # SSL 憑證 (掛載自 /etc/letsencrypt/)
+    ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+    ssl_session_timeout 5m;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # React 前端 (SPA) - 根路徑 
+    # Docker DNS
+    resolver 127.0.0.11 valid=30s;
+
+    # React 前端 (SPA)，直接proxy到 suzoo_react:3000
+    # 或者您要把 React build 復製到 /usr/share/nginx/html，再 try_files ...
     location / {
-        try_files $uri /index.html =404;
         proxy_pass http://suzoo_react:3000;
+        proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto  $scheme;
+        # SPA: 避免 404 => 可改 try_files $uri /index.html if you serve static
     }
 
-    # Express 後端 (Node) - 多個路徑代理到 suzoo_express
+    ####################################################
+    # Express (Node) API 轉發
+    ####################################################
+    # /auth, /membership, /upload, /infringement, /api, etc.
     location /auth/ {
-        proxy_pass http://suzoo_express:3000;
+        proxy_pass http://suzoo_express:${EXPRESS_PORT};
+        proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /membership/ {
-        proxy_pass http://suzoo_express:3000;
+        proxy_pass http://suzoo_express:${EXPRESS_PORT};
+        proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /upload/ {
-        proxy_pass http://suzoo_express:3000;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
-    }
-    location /infringement/ {
-        proxy_pass http://suzoo_express:3000;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
-    }
-    location /profiles/ {
-        proxy_pass http://suzoo_express:3000;
+        client_max_body_size 100m; # 允許上傳檔案大小
+        proxy_pass http://suzoo_express:${EXPRESS_PORT};
+        proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /api/ {
-        # 注意：/api/py/ 由下方更特定的路由處理，此處給 Express 其他 API 使用
-        proxy_pass http://suzoo_express:3000;
+        proxy_pass http://suzoo_express:${EXPRESS_PORT};
+        proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # FastAPI 後端 (Python) - /api/py/ 路徑代理到 suzoo_fastapi
+    ####################################################
+    # FastAPI (若需要Python後端), 路徑 /api/py/
+    ####################################################
     location /api/py/ {
-        # 將 /api/py 請求轉發至 Python API 服務
         proxy_pass http://suzoo_fastapi:8000/;
+        proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
