--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,97 +1,67 @@
-########################################################
-# upstream (Docker 內部服務) - 一定要放在 server {} 區塊外
-########################################################
-upstream suzoo_express {
-    server suzoo_express:3000;
-}
-upstream suzoo_react {
-    server suzoo_react:3000;
-}
-upstream suzoo_fastapi {
-    server suzoo_fastapi:8000;
+# 定義上游服務（upstream）區塊，在 http 區域外部（conf.d/*.conf 中即屬於 http 區域）
+upstream suzoo_auth {
+    server suzoo_auth:3001;
 }
 
-########################################################
-# HTTP => 301 => HTTPS
-########################################################
+upstream suzoo_api {
+    server suzoo_api:3000;
+}
+
+upstream suzoo_api_py {
+    server suzoo_api_py:5000;
+}
+
+# HTTP (80) 伺服器，用於將所有請求重新導向到 HTTPS
 server {
-    listen 80;
-    listen [::]:80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
-########################################################
-# HTTPS (443) with SSL + HTTP/2
-########################################################
+# HTTPS (443) 伺服器，提供實際服務
 server {
-    # 保留您原本的 listen http2 寫法
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
+    server_name suzookaizokuhunter.com;
 
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    # SSL 憑證設定（Let's Encrypt）
+    ssl_certificate      /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+    # 若有使用 Let's Encrypt 提供的額外設定檔，請確保已正確掛載並取消下面兩行的註解
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    # 內建 Docker DNS
-    resolver 127.0.0.11 valid=30s;
-
-    # Let's Encrypt 憑證
-    ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-
-    # 加強 SSL
-    ssl_session_timeout 5m;
-    ssl_session_cache   shared:SSL:50m;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
-    # 大檔上傳限制
-    client_max_body_size 200M;
-
-    ####################################################
-    # React 前端 (SPA) => fallback
-    ####################################################
-    location / {
-        try_files $uri $uri/ @reactfallback;
-    }
-    location @reactfallback {
-        proxy_pass http://suzoo_react;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    ####################################################
-    # Express 後端 /auth/ /api/
-    ####################################################
+    # 將 /auth/ 路徑的請求轉發到 suzoo_auth 服務
     location /auth/ {
-        proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-    location /api/ {
-        proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_pass http://suzoo_auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
-    # FastAPI => /api/py/
-    ####################################################
+    # 將 /api/py/ 路徑的請求轉發到 suzoo_api_py 服務
     location /api/py/ {
-        proxy_pass http://suzoo_fastapi;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_pass http://suzoo_api_py/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # 將 /api/ 路徑的請求轉發到 suzoo_api 服務
+    location /api/ {
+        proxy_pass http://suzoo_api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # 將其餘請求交給前端 React 應用（Single Page Application）處理
+    # 如果請求的檔案不存在，則回傳 index.html（React 路由入口）
+    location / {
+        try_files $uri $uri/ /index.html =404;
     }
 }
