--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,67 +1,77 @@
-# 定義上游服務（upstream）區塊，在 http 區域外部（conf.d/*.conf 中即屬於 http 區域）
-upstream suzoo_auth {
-    server suzoo_auth:3001;
+# upstream必須置於server外，但位於http區塊內，因此此設定正確：
+upstream suzoo_express {
+    server suzoo_express:3000;
 }
 
-upstream suzoo_api {
-    server suzoo_api:3000;
+upstream suzoo_react {
+    server suzoo_react:3000;
 }
 
-upstream suzoo_api_py {
-    server suzoo_api_py:5000;
+upstream suzoo_fastapi {
+    server suzoo_fastapi:8000;
 }
 
-# HTTP (80) 伺服器，用於將所有請求重新導向到 HTTPS
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name suzookaizokuhunter.com;
+    listen 80;
+    listen [::]:80;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
-# HTTPS (443) 伺服器，提供實際服務
 server {
-    listen 443 ssl http2 default_server;
-    listen [::]:443 ssl http2 default_server;
-    server_name suzookaizokuhunter.com;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL 憑證設定（Let's Encrypt）
-    ssl_certificate      /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-    # 若有使用 Let's Encrypt 提供的額外設定檔，請確保已正確掛載並取消下面兩行的註解
-    # include /etc/letsencrypt/options-ssl-nginx.conf;
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    resolver 127.0.0.11 valid=30s;
 
-    # 將 /auth/ 路徑的請求轉發到 suzoo_auth 服務
-    location /auth/ {
-        proxy_pass http://suzoo_auth/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-    # 將 /api/py/ 路徑的請求轉發到 suzoo_api_py 服務
-    location /api/py/ {
-        proxy_pass http://suzoo_api_py/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    ssl_session_timeout 5m;
+    ssl_session_cache shared:SSL:50m;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
 
-    # 將 /api/ 路徑的請求轉發到 suzoo_api 服務
-    location /api/ {
-        proxy_pass http://suzoo_api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    client_max_body_size 200M;
 
-    # 將其餘請求交給前端 React 應用（Single Page Application）處理
-    # 如果請求的檔案不存在，則回傳 index.html（React 路由入口）
     location / {
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ @reactfallback;
+    }
+    location @reactfallback {
+        proxy_pass http://suzoo_react;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /auth/ {
+        proxy_pass http://suzoo_express;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api/ {
+        proxy_pass http://suzoo_express;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api/py/ {
+        proxy_pass http://suzoo_fastapi;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
