--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,101 +1,110 @@
 # ============================
-# suzoo.conf
-# (放於 /etc/nginx/conf.d/ 內)
+# suzoo.conf (for /etc/nginx/conf.d/)
 # ============================
+#
+# 在 conf.d/*.conf 檔案中，請勿使用:
+#   - user
+#   - worker_processes
+#   - events { }
+#   - http { }
+#
+# 這些都屬於 Nginx 主設定 (main context)，
+# 由 Docker 官方映像檔或 /etc/nginx/nginx.conf 預設提供。
 
-# 在 conf.d/*.conf 檔中，請勿放 'user', 'worker_processes', 'events' 等指令
-# 這些應在 /etc/nginx/nginx.conf 中的 main context 或由官方映像檔預設提供
+# ============ 定義 upstream ============
+upstream suzoo_express {
+    server suzoo_express:3000;
+}
 
-http {
-  # ============ 定義 upstream ==============
-  upstream suzoo_express {
-      server suzoo_express:3000;
-  }
-  upstream suzoo_react {
-      server suzoo_react:3000;
-  }
-  upstream suzoo_fastapi {
-      server suzoo_fastapi:8000;
-  }
+upstream suzoo_react {
+    server suzoo_react:3000;
+}
 
-  # ============ 80 -> 443 重導 ============
-  server {
-      listen 80;
-      listen [::]:80;
-      server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-      return 301 https://$host$request_uri;
-  }
+upstream suzoo_fastapi {
+    server suzoo_fastapi:8000;
+}
 
-  # ============ HTTPS 主機設定 ============
-  server {
-      # 您可改用: listen 443 ssl; http2 on; 以避免 [warn] "listen ... http2" directive
-      listen 443 ssl http2;
-      listen [::]:443 ssl http2;
-      server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+# ============ 80 -> 443 重導 ============
+server {
+    listen 80;
+    listen [::]:80;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    return 301 https://$host$request_uri;
+}
 
-      # Docker 內 DNS resolver
-      resolver 127.0.0.11 valid=30s;
+# ============ HTTPS 主機設定 ============
+server {
+    # 若您擔心 [warn] "listen ... http2" directive is deprecated
+    # 可改成:
+    #   listen 443 ssl;
+    #   http2 on;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-      # SSL 憑證 (Let's Encrypt)
-      ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-      ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+    # Docker 內 DNS resolver
+    resolver 127.0.0.11 valid=30s;
 
-      ssl_session_timeout 5m;
-      ssl_session_cache   shared:SSL:50m;
-      ssl_protocols       TLSv1.2 TLSv1.3;
-      ssl_ciphers         HIGH:!aNULL:!MD5;
-      ssl_prefer_server_ciphers on;
+    # SSL 憑證 (Let's Encrypt)
+    ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    ssl_session_timeout 5m;
+    ssl_session_cache   shared:SSL:50m;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
 
-      # 您可調整上傳檔案大小上限
-      client_max_body_size 200M;
+    # HSTS
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-      ####################################################
-      # React 前端 (SPA fallback)
-      ####################################################
-      location / {
-          try_files $uri $uri/ @reactfallback;
-      }
-      location @reactfallback {
-          proxy_pass http://suzoo_react;
-          proxy_http_version 1.1;
-          proxy_set_header Host              $host;
-          proxy_set_header X-Real-IP         $remote_addr;
-          proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-      }
+    # 可調整上傳檔案大小限制
+    client_max_body_size 200M;
 
-      ####################################################
-      # Express API (/auth, /api)
-      ####################################################
-      location /auth/ {
-          proxy_pass http://suzoo_express;
-          proxy_http_version 1.1;
-          proxy_set_header Host              $host;
-          proxy_set_header X-Real-IP         $remote_addr;
-          proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-      }
-      location /api/ {
-          proxy_pass http://suzoo_express;
-          proxy_http_version 1.1;
-          proxy_set_header Host              $host;
-          proxy_set_header X-Real-IP         $remote_addr;
-          proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-      }
+    ####################################################
+    # React 前端 (SPA fallback)
+    ####################################################
+    location / {
+        try_files $uri $uri/ @reactfallback;
+    }
+    location @reactfallback {
+        proxy_pass http://suzoo_react;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-      ####################################################
-      # FastAPI => /api/py/
-      ####################################################
-      location /api/py/ {
-          proxy_pass http://suzoo_fastapi;
-          proxy_http_version 1.1;
-          proxy_set_header Host              $host;
-          proxy_set_header X-Real-IP         $remote_addr;
-          proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-      }
-  }
+    ####################################################
+    # Express API (/auth, /api)
+    ####################################################
+    location /auth/ {
+        proxy_pass http://suzoo_express;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /api/ {
+        proxy_pass http://suzoo_express;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    ####################################################
+    # FastAPI => /api/py/
+    ####################################################
+    location /api/py/ {
+        proxy_pass http://suzoo_fastapi;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
